# jfinqa

./: .gitignore  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  NOTICE  README.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml
examples/: quickstart.py
lm_eval_tasks/: README.md  _jfinqa_utils.py  jfinqa_consistency.yaml  jfinqa_numerical.yaml  jfinqa_temporal.yaml
lm_eval_tasks/pr_ready/: jfinqa_consistency.yaml  jfinqa_numerical.yaml  jfinqa_temporal.yaml
paper/: jfinqa.tex  references.bib
scripts/: adversarial_baselines.py  audit.py  audit_quality.py  build_lite.py  check_raw_integrity.py  hf_dataset_card.md  requirements.txt  run_baseline.py  statistical_tests.py  sync_lm_eval.py  upload_to_hf.py
scripts/data/: .gitignore  audit_quality_report.json  audit_quality_report.md  audit_report.json  audit_report.md
scripts/data/baselines/: gemini-2.0-flash_predictions.json  gemini-2.0-flash_results.json  gemini-2.5-flash__R0__metrics.json  gemini-2.5-flash__R0__predictions.json  gemini-2.5-flash__R1__metrics.json  gemini-2.5-flash__R1__predictions.json  gpt-4o-mini_predictions.json  gpt-4o-mini_results.json  gpt-4o_predictions.json  gpt-4o_results.json  gpt-5.4-mini__R0__metrics.json  gpt-5.4-mini__R0__predictions.json  gpt-5.4-mini__R1__metrics.json  gpt-5.4-mini__R1__predictions.json  qwen2.5-3b-instruct_predictions.json  qwen2.5-3b-instruct_results.json
scripts/data/baselines_full_1000/: answer_prior__metrics.json
scripts/data/final/: jfinqa_lite_manifest.json  jfinqa_lite_v1.json  jfinqa_v1.json  stats.json
scripts/pipeline/: __init__.py  config.py  dsl.py  element_map.py  run_pipeline.py  s1_collect.py  s2_transform.py  s3_generate.py  s4_validate.py
scripts/pipeline/tests/: test_dsl.py
src/jfinqa/: __init__.py  __main__.py  _metrics.py  _prompts.py  cli.py  dataset.py  evaluate.py  models.py
tests/: conftest.py  test_dataset.py  test_evaluate.py  test_lm_eval_integration.py  test_metrics.py  test_models.py
tests/fixtures/: sample_questions.json
