[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "jfinqa"
version = "0.3.2"
description = "Japanese Financial Numerical Reasoning QA Benchmark"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10"
keywords = [
    "benchmark",
    "edinet",
    "financial-nlp",
    "japanese",
    "question-answering",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "datasets>=3.0",
    "pydantic>=2.0",
    "click>=8.0",
    "loguru>=0.7",
]

[project.optional-dependencies]
# generate = ["edinet-mcp>=0.1"]  # uncomment after edinet-mcp is on PyPI
pandas = ["pandas>=2.0"]
dev = [
    "mypy>=1.10",
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-cov>=5.0",
    "ruff>=0.8",
]

[project.scripts]
jfinqa = "jfinqa.cli:cli"

[project.urls]
Homepage = "https://github.com/ajtgjmdjp/jfinqa"
Repository = "https://github.com/ajtgjmdjp/jfinqa"

[tool.hatch.build.targets.sdist]
exclude = [
    ".env",
    ".env.*",
    ".mcpregistry_*",
    ".claude/",
    "scripts/data/",
    "paper/",
    "backup_927/",
]

[tool.hatch.build.targets.wheel]
packages = ["src/jfinqa"]

[tool.ruff]
target-version = "py310"
line-length = 88
src = ["src", "scripts"]

[tool.ruff.lint]
select = [
    "E",
    "F",
    "W",
    "I",
    "N",
    "UP",
    "B",
    "A",
    "RUF",
    "TC",
]

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_configs = true

[[tool.mypy.overrides]]
module = ["datasets", "datasets.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["edinet_mcp", "edinet_mcp.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests", "scripts/pipeline/tests"]
asyncio_mode = "auto"

[dependency-groups]
dev = [
    "anthropic>=0.79.0",
    "google-genai>=1.62.0",
    "openai>=2.17.0",
    "python-dotenv>=1.2.1",
]
